@@ -493,6 +493,17 @@
       </component>
     </version>
   </module>
+  <module name="gdesklets">
+    <version release="gnome-2.4">
+      <component name="gdesklets" dir="gdesklets" group="extras">
+	<podir dir="po"/>
+	<potname name="gdesklets.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="gdl">
     <version release="gnome-2.4">
       <component name="gdl" dir="gdl" group="developer-app">
