@@ -1,3 +1,7 @@
+2003-09-04  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added the gdesklets module.
+
 2003-09-02  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Added the gnome-blog module.
